Change Ansible Collection Namespace & Collection Name (#122)

--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -9,7 +9,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Device with required information"
@@ -218,7 +218,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Interface with required information"
@@ -465,7 +465,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create IP address within Netbox with only required information - State: Present"
@@ -798,7 +798,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create prefix within Netbox with only required information"
@@ -1051,7 +1051,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Create site within Netbox with only required information"
@@ -1191,7 +1191,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test tenant creation"
@@ -1305,7 +1305,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test tenant group creation"
@@ -1388,7 +1388,7 @@
   connection: local
   gather_facts: no
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "1 - Test rack creation"
@@ -1573,7 +1573,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RACK_ROLE 1: Necessary info creation"
@@ -1662,7 +1662,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RACK_GROUP 1: Necessary info creation"
@@ -1732,7 +1732,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "MANUFACTURER 1: Necessary info creation"
@@ -1831,7 +1831,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "PLATFORM 1: Necessary info creation"
@@ -1938,7 +1938,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_TYPE 1: Necessary info creation"
@@ -2077,7 +2077,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_ROLE 1: Necessary info creation"
@@ -2186,7 +2186,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "IPAM_ROLE 1: Necessary info creation"
@@ -2288,7 +2288,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VLAN_GROUP 1: Necessary info creation"
@@ -2414,7 +2414,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VLAN 1: Necessary info creation"
@@ -2565,7 +2565,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VRF 1: Necessary info creation"
@@ -2701,7 +2701,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "RIR 1: Necessary info creation"
@@ -2788,7 +2788,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "AGGREGATE 1: Necessary info creation"
@@ -2911,7 +2911,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "REGION 1: Necessary info creation"
@@ -2998,7 +2998,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "DEVICE_BAY 1: Necessary info creation"
@@ -3093,7 +3093,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "INVENTORY_ITEM 1: Necessary info creation"
@@ -3205,7 +3205,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "VIRTUAL_MACHINE 1: Necessary info creation"
@@ -3312,7 +3312,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER 1: Necessary info creation"
@@ -3415,7 +3415,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER_GROUP 1: Necessary info creation"
@@ -3519,7 +3519,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CLUSTER_TYPE 1: Necessary info creation"
@@ -3623,7 +3623,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_VM_INTERFACE 1: Necessary info creation"
@@ -3789,7 +3789,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_PROVIDER 1: Create provider within Netbox with only required information"
@@ -3895,7 +3895,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "CIRCUIT_TYPE 1: Necessary info creation"
@@ -3998,7 +3998,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_CIRCUIT 1: Create provider within Netbox with only required information"
@@ -4114,7 +4114,7 @@
   hosts: localhost
   gather_facts: False
   collections:
-    - netbox_community.ansible_modules
+    - netbox.netbox
 
   tasks:
     - name: "NETBOX_CIRCUIT_TERMINATION 1: Create provider within Netbox with only required information"
@@ -4356,25 +4356,25 @@
       assert:
         that: "{{ query_result|count }} == 3"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'sites', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'sites', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 2: Query doesn't return Wibble (sanity check json_query)"
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`Wibble`]')|count }} == 0"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 3: Device query returns exactly one TestDeviceR1"
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`TestDeviceR1`]')|count }} == 1"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 4: VLAN ID 400 can be queried and is named 'Test VLAN'"
       assert:
         that: "{{ (query_result|json_query('[?value.vid==`400`].value.name'))[0] == 'Test VLAN' }}"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'vlans', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'vlans', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
 
     - name: "NETBOX_LOOKUP 5: Add one of two devices for lookup filter test."
       netbox_device:
@@ -4408,4 +4408,4 @@
       assert:
         that: "{{ query_result|json_query('[?value.display_name==`L2`]')|count }} == 1"
       vars:
-        query_result: "{{ query('netbox_community.ansible_modules.netbox', 'devices', api_filter='role=core-switch tag=lookup', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
+        query_result: "{{ query('netbox.netbox.nb_lookup', 'devices', api_filter='role=core-switch tag=lookup', api_endpoint='http://localhost:32768', token='0123456789abcdef0123456789abcdef01234567') }}"
