Fix importing ipaddress class with Ansible 2.10 (#144)
Because ansible modules must still support Python 2.7, the Python 3 ipaddress library has been backported into the Ansible project for 2.7 compatibility. ansible/ansible#42265
In Ansible 2.10, this has been moved into the ansible.netcommon collection. 9a7a574ffc840590de5ec43a91386d0064cdec4e

I've declared ansible.netcommon as a dependency of this collection, and updated the import paths.

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -45,7 +45,8 @@ tags:
 # collection label 'namespace.name'. The value is a version range
 # L(specifiers,https://python-semanticversion.readthedocs.io/en/latest/#requirement-specification). Multiple version
 # range specifiers can be set and are separated by ','
-dependencies: {}
+dependencies:
+  ansible.netcommon: "*"
 
 # The URL of the originating SCM repository
 repository: https://github.com/netbox-community/ansible_modules
