Put skip_cleanup back in travis (#144)
The documentation says it's deprecated in dplv2 (currently in preview only). It's not clear whether it's still required for dplv1.

https://docs.travis-ci.com/user/deployment-v2#cleaning-up-the-git-working-directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ script:
 
 deploy:
   provider: script
+  skip_cleanup: true
   script: ansible-galaxy collection publish $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz --api-key="$GALAXY_API_TOKEN"
   on:
     tags: true
