--- a/tests/integration/v2.7/tasks/netbox_service.yml
+++ b/tests/integration/v2.7/tasks/netbox_service.yml
@@ -58,6 +58,7 @@
       - test_service_idempotence['services']['port'] == 9100
       - test_service_idempotence['services']['protocol'] == "tcp"
       - test_service_idempotence['msg'] == "services node-exporter already exists"
+
 - name: "NETBOX_SERVICE: Test update"
   netbox_service:
     netbox_url: "http://localhost:32768"
@@ -67,6 +68,8 @@
       name: "node-exporter"
       port: 9100
       protocol: UDP
+      tags:
+        - "Schnozzberry"
     state: present
   register: test_service_update
 
@@ -76,6 +79,7 @@
       - test_service_update is changed
       - test_service_update['diff']['before']['protocol'] == "tcp"
       - test_service_update['diff']['after']['protocol'] == "udp"
+      - test_service_update['diff']['after']['tags'][0] == "Schnozzberry"
       - test_service_update['msg'] == "services node-exporter updated"
 
 - name: "NETBOX_SERVICE: Test service deletion"
@@ -97,3 +101,29 @@
       - test_service_delete['diff']['after']['state'] == "absent"
       - test_service_delete['diff']['before']['state'] == "present"
       - test_service_delete['msg'] == "services node-exporter deleted"
+
+- name: "NETBOX_SERVICE: Test service IP addresses"
+  netbox_service:
+    netbox_url: "http://localhost:32768"
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: "test100"
+      name: "node-exporter"
+      port: 9100
+      protocol: UDP
+      ipaddresses:
+        - address: "172.16.180.1/24"
+    state: present
+  register: test_service_ip_addresses
+
+- name: "NETBOX_SERVICE ASSERT - Service has been created with IP address"
+  assert:
+    that:
+      - test_service_ip_addresses is changed
+      - test_service_ip_addresses['diff']['after']['state'] == "present"
+      - test_service_ip_addresses['diff']['before']['state'] == "absent"
+      - test_service_ip_addresses['services']['name'] == "node-exporter"
+      - test_service_ip_addresses['services']['port'] == 9100
+      - test_service_ip_addresses['services']['protocol'] == "udp"
+      - test_service_ip_addresses['services']['ipaddresses'] is defined
+      - test_service_ip_addresses['msg'] == "services node-exporter created"
