--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,2 @@
 [inventory]
-enable_plugins =  netbox.netbox.nb_inventory
+enable_plugins =  netbox.netbox.nb_inventory, auto, host_list, yaml, ini, toml, script
