--- a/tests/integration/v2.6/tasks/netbox_service.yml
+++ b/tests/integration/v2.6/tasks/netbox_service.yml
@@ -58,7 +58,28 @@
       - test_service_idempotence['services']['port'] == 9100
       - test_service_idempotence['services']['protocol'] == 6
       - test_service_idempotence['msg'] == "services node-exporter already exists"
+
 - name: "NETBOX_SERVICE: Test update"
+  netbox_service:
+    netbox_url: "http://localhost:32768"
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: "FOR_SERVICE"
+      name: "node-exporter"
+      port: 9100
+      description: "Service updated"
+      protocol: TCP
+    state: present
+  register: test_service_update
+
+- name: "NETBOX_SERVICE ASSERT - Service has been updated"
+  assert:
+    that:
+      - test_service_update is changed
+      - test_service_update['diff']['after']['description'] == "Service updated"
+      - test_service_update['msg'] == "services node-exporter updated"
+
+- name: "NETBOX_SERVICE: Test same details, but different protocol - Create"
   netbox_service:
     netbox_url: "http://localhost:32768"
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
@@ -68,15 +89,18 @@
       port: 9100
       protocol: UDP
     state: present
-  register: test_service_update
+  register: test_service_protocol
 
-- name: "NETBOX_SERVICE ASSERT - Service has been updated"
+- name: "NETBOX_SERVICE ASSERT - Different protocol - Create"
   assert:
     that:
-      - test_service_update is changed
-      - test_service_update['diff']['before']['protocol'] == 6
-      - test_service_update['diff']['after']['protocol'] == 17
-      - test_service_update['msg'] == "services node-exporter updated"
+      - test_service_protocol is changed
+      - test_service_protocol['diff']['after']['state'] == "present"
+      - test_service_protocol['diff']['before']['state'] == "absent"
+      - test_service_protocol['services']['name'] == "node-exporter"
+      - test_service_protocol['services']['port'] == 9100
+      - test_service_protocol['services']['protocol'] == 17
+      - test_service_protocol['msg'] == "services node-exporter created"
 
 - name: "NETBOX_SERVICE: Test service deletion"
   netbox_service:
@@ -86,7 +110,7 @@
       device: "FOR_SERVICE"
       name: "node-exporter"
       port: 9100
-      protocol: UDP
+      protocol: TCP
     state: absent
   register: test_service_delete
 
