--- a/tests/integration/v2.7/tasks/netbox_service.yml
+++ b/tests/integration/v2.7/tasks/netbox_service.yml
@@ -67,7 +67,7 @@
       device: "FOR_SERVICE"
       name: "node-exporter"
       port: 9100
-      protocol: UDP
+      protocol: TCP
       tags:
         - "Schnozzberry"
     state: present
@@ -77,10 +77,31 @@
   assert:
     that:
       - test_service_update is changed
-      - test_service_update['diff']['before']['protocol'] == "tcp"
-      - test_service_update['diff']['after']['protocol'] == "udp"
       - test_service_update['diff']['after']['tags'][0] == "Schnozzberry"
       - test_service_update['msg'] == "services node-exporter updated"
+
+- name: "NETBOX_SERVICE: Test same details, but different protocol - Create"
+  netbox_service:
+    netbox_url: "http://localhost:32768"
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: "FOR_SERVICE"
+      name: "node-exporter"
+      port: 9100
+      protocol: UDP
+    state: present
+  register: test_service_protocol
+
+- name: "NETBOX_SERVICE ASSERT - Different protocol - Create"
+  assert:
+    that:
+      - test_service_protocol is changed
+      - test_service_protocol['diff']['after']['state'] == "present"
+      - test_service_protocol['diff']['before']['state'] == "absent"
+      - test_service_protocol['services']['name'] == "node-exporter"
+      - test_service_protocol['services']['port'] == 9100
+      - test_service_protocol['services']['protocol'] == "udp"
+      - test_service_protocol['msg'] == "services node-exporter created"
 
 - name: "NETBOX_SERVICE: Test service deletion"
   netbox_service:
