--- a/tests/integration/test-inventory-plurals.yml
+++ b/tests/integration/test-inventory-plurals.yml
@@ -4,7 +4,7 @@ token: "0123456789abcdef0123456789abcdef01234567"
 validate_certs: false
 
 config_context: True
-plurals: False
+plurals: True
 interfaces: True
 services: True
 
