--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
         - pip install -U pip "setuptools>=46.1.3"
         # coverage 5.0 is not compatible with ansible-test https://github.com/ansible/ansible/issues/65907
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff pycodestyle ansible
+        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     - name: "Python 3.6 - Netbox 2.7 - Latest PyPi Ansible"
       python: 3.6
@@ -47,12 +47,14 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff pycodestyle ansible
+        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
-    - name: "Python 3.8 - Netbox 2.8 - Latest PyPi Ansible"
-      python: 3.8
+    # Stick to python 3.7 instead of 3.8, as ansible-test sanity is not compatible with 3.7
+    # https://github.com/ansible/ansible/issues/67118
+    - name: "Python 3.7 - Netbox 2.8 - Latest PyPi Ansible"
+      python: 3.7
       env:
-      - PYTHON_VER=3.8 VERSION=v2.8
+      - PYTHON_VER=3.7 VERSION=v2.8
       install:
         - cd ..
         # Setup netbox container for integration testing
@@ -63,7 +65,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff pycodestyle ansible
+        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Latest development versions of Netbox and Ansible, newest Python
     # This may be broken sometimes by changes in the netbox & ansible projects
@@ -81,7 +83,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography jmespath jsondiff pycodestyle
+        - pip install pynetbox cryptography jmespath jsondiff
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
         - source hacking/env-setup
@@ -112,7 +114,10 @@ script:
   - black . --check --diff
 
   # Sanity tests
-  - ansible-test sanity -v --python $PYTHON_VER
+  # --requirements - install pip packages as necessary
+  # Skip pep8 as we use black instead
+  # Skip validate-modules until the issues can be resolved #180
+  - ansible-test sanity -v --requirements --python $PYTHON_VER --skip-test pep8 --skip-test validate-modules
 
   # Unit tests, with code coverage
   - ansible-test units -vvvv --coverage --python $PYTHON_VER
