--- a/galaxy.yml
+++ b/galaxy.yml
@@ -63,3 +63,13 @@ homepage:
 
 # The URL to the collection issue tracker
 issues: https://github.com/netbox-community/ansible_modules/issues
+
+# Files to ignore when building collection. Only supported when building with Ansible 2.10
+# https://github.com/ansible/ansible/issues/67543
+# https://docs.ansible.com/ansible/devel/dev_guide/developing_collections.html#ignoring-files-and-folders
+build_ignore:
+- venv
+- ansible_collections
+- tests/output
+- .pytest_cache
+- .vscode
