Inventory: Add another inventory to test against that explores more non-default options
Includes testing the Constructed inherited options.

Also added the same inventory from the past v0.2.0 release. I compared its output to the output of the actualy v0.2.0 release and can confirm nothing has changed - only added new host_vars (config_context, regions) since then, and changed the test data slightly. (ie. there should be no breaking change for existing users of this collection)

--- a/tests/integration/targets/inventory/files/test-inventory-plurals.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-plurals.yml
@@ -3,6 +3,11 @@ api_endpoint: "http://localhost:32768"
 token: "0123456789abcdef0123456789abcdef01234567"
 validate_certs: false
 
+cache: True
+cache_timeout: 3600
+cache_plugin: jsonfile
+cache_connection: /tmp/inventory_netbox
+
 config_context: True
 plurals: True
 interfaces: True
