--- a/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
@@ -9,6 +9,7 @@ flatten_custom_fields: True
 plurals: False
 interfaces: False
 services: False
+fetch_all: False
 group_names_raw: True
 
 group_by:
@@ -24,3 +25,4 @@ group_by:
   - cluster
   - cluster_group
   - cluster_type
+  - is_virtual
