--- a/tests/integration/targets/inventory/files/test-inventory-plurals.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-plurals.yml
@@ -11,6 +11,7 @@ cache_connection: /tmp/inventory_netbox
 config_context: True
 plurals: True
 interfaces: True
+fetch_all: False
 services: True
 
 group_by:
@@ -26,3 +27,4 @@ group_by:
   - cluster
   - cluster_group
   - cluster_type
+  - is_virtual
