Inventory: fix case fetching interfaces with fetch_all: False and max_uri_length: 0
When fetching interfaces of virtual-chassis child devices in a separate request to the master, the interfaces will be returned twice.

Converted some lists to dicts to efficiently check if the interface ID already exists.

Made same change for services and IP Addresses, in case they have similar issues.

--- a/tests/integration/targets/inventory/files/test-inventory-plurals.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-plurals.yml
@@ -11,8 +11,11 @@ cache_connection: /tmp/inventory_netbox
 config_context: True
 plurals: True
 interfaces: True
-fetch_all: False
 services: True
+
+# Enough to fit only 2 devices, so tests chunking logic
+max_uri_length: 80
+fetch_all: False
 
 group_by:
   - sites
