--- a/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
@@ -7,9 +7,10 @@ config_context: True
 flatten_config_context: True
 flatten_custom_fields: True
 plurals: False
-interfaces: False
-services: False
+interfaces: True
+services: True
 fetch_all: False
+max_uri_length: 0
 group_names_raw: True
 
 group_by:
