--- a/tests/integration/targets/latest/tasks/netbox_device.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device.yml
@@ -126,7 +126,7 @@
       device_type: "1841"
       device_role: "Core Switch"
       site: "Test Site2"
-      rack: "Test Rack"
+      rack: "Test Rack Site 2"
       position: 35
       face: "Front"
       tags:
