--- a/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
@@ -7,8 +7,10 @@ config_context: True
 flatten_config_context: True
 flatten_custom_fields: True
 plurals: False
-interfaces: False
-services: False
+interfaces: True
+services: True
+fetch_all: False
+max_uri_length: 0
 group_names_raw: True
 
 group_by:
@@ -24,3 +26,4 @@ group_by:
   - cluster
   - cluster_group
   - cluster_type
+  - is_virtual
