--- a/tests/integration/targets/inventory/files/test-inventory-plurals.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-plurals.yml
@@ -13,6 +13,10 @@ plurals: True
 interfaces: True
 services: True
 
+# Enough to fit only 2 devices, so tests chunking logic
+max_uri_length: 80
+fetch_all: False
+
 group_by:
   - sites
   - tenants
@@ -26,3 +30,4 @@ group_by:
   - cluster
   - cluster_group
   - cluster_type
+  - is_virtual
