Updated test with state new

--- a/tests/integration/targets/latest/tasks/netbox_ip_address.yml
+++ b/tests/integration/targets/latest/tasks/netbox_ip_address.yml
@@ -316,6 +316,7 @@
       interface:
         name: Eth0
         virtual_machine: test101-vm
+    state: "new"
   register: test_fifteen
 
 - name: "15 - ASSERT"
