--- a/tests/integration/targets/latest/tasks/netbox_device_interface.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device_interface.yml
@@ -11,7 +11,7 @@
     data:
       device: test100
       name: GigabitEthernet3
-      form_factor: "1000Base-T (1GE)"
+      type: "1000Base-T (1GE)"
   register: test_one
 
 - name: "1 - ASSERT"
@@ -72,7 +72,7 @@
     data:
       device: test100
       name: port-channel1
-      form_factor: Link Aggregation Group (LAG)
+      type: Link Aggregation Group (LAG)
       mtu: 1600
       mgmt_only: false
       mode: Access
@@ -102,7 +102,7 @@
       device: test100
       name: GigabitEthernet3
       enabled: false
-      form_factor: 1000Base-T (1GE)
+      type: 1000Base-T (1GE)
       lag:
         name: port-channel1
       mtu: 1600
@@ -135,7 +135,7 @@
       device: test100
       name: GigabitEthernet21
       enabled: false
-      form_factor: 1000Base-T (1GE)
+      type: 1000Base-T (1GE)
       untagged_vlan:
         name: Wireless
         site: Test Site
@@ -191,7 +191,7 @@
     data:
       device: "R1-Device"
       name: "port-channel1"
-      form_factor: "Link Aggregation Group (LAG)"
+      type: "Link Aggregation Group (LAG)"
 
 - name: "8 - Create interface and assign it to parent LAG - non dict"
   netbox.netbox.netbox_device_interface:
@@ -201,7 +201,7 @@
       device: test100
       name: GigabitEthernet4
       enabled: false
-      form_factor: 1000Base-T (1GE)
+      type: 1000Base-T (1GE)
       lag: "port-channel1"
       mtu: 1600
       mgmt_only: false
@@ -232,7 +232,7 @@
     data:
       device: Test Nexus Child One
       name: Ethernet2/2
-      form_factor: 1000Base-T (1GE)
+      type: 1000Base-T (1GE)
     state: present
   register: test_nine
 
