Enhancement: netbox_inventory_item - Add discovered field and update query to allow serial (#229)

--- a/tests/integration/targets/latest/tasks/netbox_inventory_item.yml
+++ b/tests/integration/targets/latest/tasks/netbox_inventory_item.yml
@@ -54,6 +54,7 @@
       serial: "1234"
       asset_tag: "1234"
       description: "New SFP"
+      discovered: True
       tags:
         - Schnozzberry
     state: present
@@ -69,6 +70,7 @@
       - test_three['diff']['after']['manufacturer'] == 1
       - test_three['diff']['after']['part_id'] == "10G-SFP+"
       - test_three['diff']['after']['tags'][0] == "Schnozzberry"
+      - test_three['diff']['after']['discovered'] == True
       - test_three['inventory_item']['name'] == "10G-SFP+"
       - test_three['inventory_item']['device'] == 1
       - test_three['inventory_item']['asset_tag'] == "1234"
@@ -77,6 +79,7 @@
       - test_three['inventory_item']['manufacturer'] == 1
       - test_three['inventory_item']['part_id'] == "10G-SFP+"
       - test_three['inventory_item']['tags'][0] == "Schnozzberry"
+      - test_three['inventory_item']['discovered'] == True
       - test_three['msg'] == "inventory_item 10G-SFP+ updated"
 
 - name: "INVENTORY_ITEM 4: ASSERT - Delete"
