Updated normalize_data to try and convert strings to integers, added unit/integration tests

--- a/tests/integration/targets/latest/tasks/netbox_ip_address.yml
+++ b/tests/integration/targets/latest/tasks/netbox_ip_address.yml
@@ -160,9 +160,7 @@
       nat_inside:
         address: 172.16.1.20
         vrf: Test VRF
-      interface:
-        name: GigabitEthernet1
-        device: test100
+      interface: 3
   register: test_eight
 
 - name: "8 - ASSERT"
