--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -95,6 +95,12 @@
 - name: "NETBOX_CIRCUIT_TERMINATION TESTS"
   include_tasks: "netbox_circuit_termination.yml"
 
+- name: "NETBOX_POWER_PANEL TESTS"
+  include_tasks: "netbox_power_panel.yml"
+
+- name: "NETBOX_POWER_FEED TESTS"
+  include_tasks: "netbox_power_feed.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
