add copyright notice to tests

--- a/tests/integration/targets/latest/tasks/netbox_power_panel.yml
+++ b/tests/integration/targets/latest/tasks/netbox_power_panel.yml
@@ -1,4 +1,7 @@
 ---
+# © 2020 Nokia
+# Licensed under the GNU General Public License v3.0 only
+# SPDX-License-Identifier: GPL-3.0-only
 ##
 ##
 ### NETBOX_POWER_PANEL
